# Scaler-Final

./: README.md
Project/: BLOG.md  DEMO_SCRIPT.md  Dockerfile  PITCH.md  README.md  openenv.yaml  pyproject.toml  requirements.txt
Project/docs/: huggingface_blog.md  judge_packet.md  judging_alignment.md  problem_statement.md  submission_checklist.md
Project/notebooks/: supportops_x_grpo_colab.ipynb
Project/results/: policy_eval.json  tabular_training_report.json
Project/results/trl_grpo_smoke/: trainer_log_history.json
Project/scripts/: __init__.py  evaluate_policies.py  train_tabular_policy.py
Project/server/: __init__.py  app.py
Project/supportops_x_env/: __init__.py  client.py  data.py  models.py  openenv.yaml  rewards.py
Project/supportops_x_env/server/: __init__.py  app.py  environment.py
Project/tests/: test_environment.py
Project/training/: __init__.py  supportops_tool_env.py  train_grpo.py
